package ar.edu.utn.frba.dds.logistica.domain;

public enum EstadoEntrega {
  PENDIENTE,
  EN_TRASLADO,
  ENTREGADA,
  NO_RECIBIDA
}
